# pwndbg

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.arch  Dockerfile.base-apt  Dockerfile.dnf  LICENSE.md  README.md  crossarch-tests.sh  docker-compose.yml  flake.nix  gdbinit.py  kernel-tests.sh  lint.sh  mkdocs.yml  pyproject.toml  setup-dev.sh  setup.sh  tests.sh
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: base-image.yml  docker.yml  docs-dev.yml  docs-release.yml  lint.yml  lock.yml  releases.yml  tests.yml  update-flake-lock.yml
docs/: .nav.yml  features.md  install.sh  setup.md
docs/commands/: index.md
docs/commands/allocators/: jemalloc.md  mallocng.md
docs/commands/breakpoint/: break-if-not-taken.md  break-if-taken.md  breakrva.md  ignore.md
docs/commands/context/: context.md  contextnext.md  contextoutput.md  contextprev.md  contextsearch.md  contextunwatch.md  contextwatch.md  regs.md
docs/commands/darwin_libsystem_mach-o/: commpage.md
docs/commands/developer/: dev-dump-instruction.md  log-level.md  profiler.md
docs/commands/disassemble/: emulate.md  nearpc.md
docs/commands/glibc_ptmalloc2_heap/: arena.md  arenas.md  bins.md  fastbins.md  find-fake-fast.md  heap.md  hi.md  largebins.md  malloc-chunk.md  mp.md  smallbins.md  tcache.md  tcachebins.md  top-chunk.md  try-free.md  unsortedbin.md  vis-heap-chunks.md
docs/commands/integrations/: ai.md  bn-sync.md  decomp.md  decompiler-integration.md  j.md  r2.md  r2pipe.md  rop.md  ropper.md  rz.md  rzpipe.md  save-ida.md
docs/commands/jemalloc_heap/: jemalloc-extent-info.md  jemalloc-find-extent.md  jemalloc-heap.md
docs/commands/kernel/: binder.md  buddydump.md  kbase.md  kbpf.md  kchecksec.md  kcmdline.md  kconfig.md  kcurrent.md  kfile.md  klookup.md  kmem-trace.md  knft-dump.md  knft-list-chains.md  knft-list-exprs.md  knft-list-flowtables.md  knft-list-objects.md  knft-list-rules.md  knft-list-sets.md  knft-list-tables.md  knft.md  kversion.md  pcplist.md  slab.md
docs/commands/linux_libc_elf/: argc.md  argv.md  aslr.md  auxv-explore.md  auxv.md  elfsections.md  envp.md  errno.md  exithandlers.md  got.md  gotplt.md  libcinfo.md  linkmap.md  onegadget.md  piebase.md  plt.md  strings.md  threads.md  tls.md  track-got.md  track-heap.md
docs/commands/memory/: distance.md  dump-register-frame.md  gdt.md  go-dump.md  go-type.md  hexdump.md  leakfind.md  memfrob.md  mmap.md  mprotect.md  p2p.md  probeleak.md  search.md  telescope.md  vmmap-add.md  vmmap-clear.md  vmmap-explore.md  vmmap.md  xinfo.md  xor.md
docs/commands/misc/: asm.md  checksec.md  comm.md  cyclic.md  cymbol.md  down.md  dt.md  dumpargs.md  getfile.md  hex2ptr.md  (+12 more)
docs/configuration/: config.md  index.md  theme.md
docs/contributing/: .nav.yml  adding-a-command.md  allocator.md  common-pitfalls.md  dev-notes.md  improving-annotations.md  index.md  libc-provider.md  setup-pwndbg-dev.md  stacked-pr.md  writing-tests.md
docs/functions/: index.md
docs/misc/: binja-integration.md  gdb-lldb-commands.md  gdb-tui.md  ghidra-integration.md  pwndbg-users.md  splitting-the-context.md
docs/tutorials/: bare-metal-debugging.md  decompiler-integration.md  packaging.md  pwndbg-users.md
nix/: devshell.nix  portable.nix  pyenv.nix
nix/bundle/: bundle.py
nix/overlay/: gdb.nix  lldb.nix
profiling/: benchmark.py  context.py  print_stats.py
profiling/benchmark_cache/: gdbscript1.py  gdbscript2.py
profiling/benchmark_vis_heap_chunks/: gdbscript.py
pwndbg/: __init__.py  arguments.py  auxv.py  chain.py  decorators.py  enhance.py  exception.py  ghidra.py  glibc.py  hexdump.py  log.py  radare2.py  rizin.py  search.py  ui.py
pwndbg/aglib/: __init__.py  arch.py  arch_mod.py  argv.py  asm.py  commpage.py  dt.py  dynamic.py  elf.py  errno.py  file.py  godbg.py  macho.py  memory.py  nearpc.py  next.py  objc.py  onegadget.py  proc.py  qemu.py  radare2.py  regs.py  regs_mod.py  rizin.py  saved_register_frames.py  shellcode.py  signal.py  stack.py  strings.py  structures.py  symbol.py  tls.py  typeinfo.py  vmmap.py  vmmap_custom.py
pwndbg/color/: __init__.py  context.py  disasm.py  hexdump.py  memory.py  message.py  syntax_highlight.py  theme.py
pwndbg/commands/: __init__.py  ai.py  aslr.py  asm.py  attachp.py  auxv.py  binder.py  binja.py  binja_functions.py  branch.py  buddydump.py  canary.py  checksec.py  comments.py  commpage.py  config.py  context.py  cpsr.py  cyclic.py  cymbol.py  decompiler_integration.py  dev.py  distance.py  dt.py  dumpargs.py  elf.py  exithandlers.py  flags.py  gdt.py  got.py  got_tracking.py  hex2ptr.py  hexdump.py  hijack_fd.py  ida.py  ignore.py  integration.py  ipython_interactive.py  jemalloc.py  kbase.py  (+59 more)
pwndbg/dbg_mod/: __init__.py
pwndbg/dintegration/: __init__.py
pwndbg/emu/: emulator.py
pwndbg/gdblib/: __init__.py  events.py  functions.py  got.py  info.py  prompt.py  ptmalloc2_tracking.py  scheduler.py  shellcode.py  vmmap.py
pwndbg/integration/: __init__.py  binja.py  ida.py
pwndbg/lib/: __init__.py  abi.py  arch.py  cache.py  config.py  ctypes.py  elftypes.py  err.py  exception.py  funcparser.py  functions.py  gcc.py  got.py  memory.py  net.py  pretty_print.py  proc_fd.py  qemu.py  regs.py  siginfo.py  sock_diag.py  stdio.py  syscall.py  tempfile.py  tips.py  version.py  which.py  zig.py
pwndbg/wrappers/: __init__.py  checksec.py  readelf.py
pwndbginit/: common.py  gdbpatches.py  lldbinit.py  pwndbg_gdb.py  pwndbg_lldb.py
scripts/: _gen_command_docs.py  _gen_function_docs.py  common.sh  generate-readme.py  generate_readme.sh  python-is-ci-python.sh
scripts/_docs/: build_command_docs.py  build_configuration_docs.py  build_function_docs.py  command_docs_common.py  extract_command_docs.py  extract_configuration_docs.py  extract_function_docs.py  gen_docs_generic.py
tests/: pytests_launcher.py  tests.py
tests/host/: __init__.py
tests/qemu-tests/: conftest.py  download-kernel-images.sh  run-qemu-system.sh  system-tests.sh
tests/unit_tests/: test_net.py  test_proc_fd.py  test_qemu.py  test_readelf.py  test_regs.py
themes/: README.md
(+151 files in other folders)
