[project]
name = "pwndbg"
version = "2026.02.18"
description = "Exploit Development and Reverse Engineering with GDB Made Easy"
authors = [{ name = "Dominik 'disconnect3d' Czarnota", email = "dominik.b.czarnota+dc@gmail.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
dependencies = [
    "capstone6pwndbg==6.0.0a9",
    "unicorn>=2.1.4,<3",
    "pwntools>=4.14.1,<5",
    "sortedcontainers>=2.4.0,<3",
    "tabulate>=0.10.0,<0.11",
    "typing-extensions>=4.15.0,<5",
    "pycparser~=3.0",
    "pyelftools>=0.33,<1",
    "pygments>=2.19.2,<3",
    "psutil>=7.0.0,<8",
    # We install uv to the venv
    "uv>=0.11.17",
    # Optional? only for 'ipi' command
    "ipython>=8.37.0,<9",
    # Optional? only for 'ropgadget' command
    "ropgadget==7.6",
    # Optional? only for 'ai' commands
    "requests>=2.34.2,<3",
    # Optional? only for pretty print traceback
    "rich>=15.0.0,<16",
    # Optional? only for qemu-system vmmap
    "pt @ git+https://github.com/martinradev/gdb-pt-dump@50227bda0b6332e94027f811a15879588de6d5cb",
    # Optional? 'ziglang' must be optional, as it is not available on every platform.
    # It is only used for the 'cymbol' command and some `asm` functionality.
    "ziglang==0.14.1 ; (platform_system == 'Linux' and platform_machine != 'loongarch64') or platform_system != 'Linux'",
    # Used for symbol syncing (e.g. klookup --apply and decompiler integration)
    "niche-elf==0.3.6",
    # This dep is optional.
    # For installing the decompiler plugins (we don't actually use it as a python library).
    # If you bump this, also bump the pwndbg/commands/decompiler_integration.py:d2d_required* variables.
    "decomp2dbg==3.14.1",
]

[project.optional-dependencies]
lldb = [
    # Optional? for better LLDB REPL behaviour on python builds that use libeedit.
    'gnureadline>=8.2.13,<9; sys_platform != "win32"',
    'pyreadline3>=3.5.6,<4; sys_platform == "win32"',
    "lldb-for-pwndbg==22.1.0.post2",
]
gdb = [
    "gdb-for-pwndbg==17.2.0.post3",
]

[dependency-groups]
build = ["hatchling", "editables"]
dev = [
    "sortedcontainers-stubs>=2.4.3,<3",
    "types-pygments>=2.19.0.20250809,<3",
    "types-requests>=2.32.4.20250809,<3",
    "types-tabulate>=0.9.0.20240106,<0.10",
    "types-gdb>=12.1.4.20240704,<13",
    "types-psutil>=7.0.0.20250601,<8",
]
lint = [
    "mypy>=1.18.2,<2",
    "ruff==0.15.9",
    "vermin>=1.8.0,<2",
]
tests = [
    # Newer versions of pytest break CI on GitHub
    "pytest==8.0.2",
    "coverage[toml]>=7.5.0,<8",
]
docs = [
    "mdutils",
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocs-minify-plugin",
    "mkdocs-rss-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "pymdown-extensions",
    "mkdocs-api-autonav",
    "griffe-modernized-annotations",
    # Used by mkdocstrings to format source.
    "ruff",
    "mike",
    "mkdocs-awesome-nav",
]

[tool.uv.sources]
uv = [
  { index = "loong64", marker = "platform_system == 'Linux' and platform_machine == 'loongarch64'"},
]
ruff = [
  { index = "loong64", marker = "platform_system == 'Linux' and platform_machine == 'loongarch64'"},
]
lldb-for-pwndbg = [
  { index = "loong64", marker = "platform_system == 'Linux' and platform_machine == 'loongarch64'"},
]
gdb-for-pwndbg = [
  { index = "loong64", marker = "platform_system == 'Linux' and platform_machine == 'loongarch64'"},
]

[[tool.uv.index]]
name = "loong64"
url = "https://mirrors.loong64.com/pypi/simple"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "A003",
    "E402",
    "E501",
    "E731",
    "F405",
    "F821",
    "W505",
    "SIM102",  # flake8-simplify collapsible-if
    "SIM103",  # flake8-simplify needless-bool
    "SIM108",  # flake8-simplify if-else-block-instead-of-if-exp
    "SIM110",  # flake8-simplify reimplemented-builtin
    "SIM114",  # flake8-simplify if-with-same-arms
    "SIM115",  # flake8-simplify open-file-with-context-handler
    "SIM117",  # flake8-simplify multiple-with-statements
    "SIM300",  # flake8-simplify yoda-coonditions
    "RET503",  # flake8-return implicit-return
    "RET504",  # flake8-return unnecessary-assign
    "PLR0911", # pylint-refactor too-many-statements
    "PLR0912", # pylint-refactor too-many-branches
    # We want to unignore the below lints, but they currently return too many errors
    "PLR0913", # pylint-refactor too-many-arguments
    "PLR0915", # pylint-refactor too-many-return-statements
    "PLR1704", # pylint-refactor redefined-argument-from-local (this will probably also catch some bugs)
    "PLR2004", # pylint-refactor magic-value-comparison
]

select = [
    "A",      # flake8-builtins
    "E",      # pycodestyle
    "F",      # pyflakes
    "W",      # pycodestyle
    "C4",     # flake8-comprehensions
    "I",      # isort
    "ISC",    # flake8-implicit-str-concat
    "SLOT",   # flake8-slots
    "FLY",    # flynt
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "UP",     # pyugprade
    "FURB",   # refurb
    "PLR",    # pylint-refactor
    # We want to enable the below lints, but they currently return too many errors
    # "SLF" # flake8-self
    # "PTH", # flake8-use-pathlib
]

[tool.uv]
default-groups = []

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = [
    "all",
    "bin",
    "breakpoint",
    "copyright",
    "dir",
    "exit",
    "format",
    "hex",
    "map",
    "max",
    "min",
    "next",
    "type",
]

[tool.ruff.lint.isort]
force-single-line = true
known-third-party = [
    "capstone6pwndbg",
    "unicorn",
    "pycparser",
    "gdb",
    "lldb",
]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
max-args = 10

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["/pwndbg", "/pwndbginit", "gdbinit.py"]

[tool.hatch.build.targets.wheel]
include = ["/pwndbg", "/pwndbginit"]

[tool.hatch.build.targets.wheel.shared-data]
"gdbinit.py" = "share/pwndbg/gdbinit.py"

[project.scripts]
pwndbg = "pwndbginit.pwndbg_gdb:main"
pwndbg-lldb = "pwndbginit.pwndbg_lldb:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint.per-file-ignores]
# FIXME
"pwndbg/gdblib/__init__.py" = ["F401"]
# magic values are usually fine in tests
"tests/{library,unit_tests}/**" = ["PLR2004"]

[tool.mypy]
strict_optional = false
check_untyped_defs = true
allow_untyped_globals = false
allow_redefinition = true
allow_any_generics = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
# warn_return_any = true
# warn_unreachable = true
show_error_context = true
pretty = true
show_error_codes = true
incremental = false
disable_error_code = [
    # https://github.com/python/mypy/issues/6232
    "assignment",
]

# ==== our typing is bad ====
# FIXME: Fix the types in these modules

[[tool.mypy.overrides]]
module = [
    "pwndbg.color.*",
    "pwndbg.commands.context",
    "pwndbg.commands.cymbol",
    "pwndbg.commands.hexdump",
    "pwndbg.commands.procinfo",
    "pwndbg.commands.reload",
    "pwndbg.commands.version",
    "pwndbg.exception",
    "pwndbg.aglib.dynamic",
    "pwndbg.gdblib.events",
    "pwndbg.gdblib.got",
    "pwndbg.gdblib.ptmalloc2_tracking",
    "pwndbg.aglib.heap.*",
    "pwndbg.hexdump",
    "pwndbg.ui",
    "pwndbg.wrappers.*",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = ["pwndbg.commands.telescope"]
disable_error_code = ["attr-defined", "index"]

[[tool.mypy.overrides]]
module = ["pwndbg.aglib.kernel.nftables"]
disable_error_code = ["no-redef"]

[[tool.mypy.overrides]]
module = [
    "pwndbg.aglib.nearpc",
    "pwndbg.aglib.typeinfo",
]
disable_error_code = ["name-defined", "attr-defined"]

[[tool.mypy.overrides]]
module = ["pwndbg.aglib.disasm.*"]
disable_error_code = ["index", "name-defined", "attr-defined"]

# ===========================

# These are not our fault, so they make sense.
[[tool.mypy.overrides]]
module = [
    "capstone6pwndbg.*",
    "pwnlib.*",
    "ropgadget.*",
    "ipdb.*",
    "r2pipe",
    "rzpipe",
    "pt.*",
    "lldb.*",
    "gnureadline",
    "decomp2dbg.*",
    "mdutils.*"
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
parallel = true
disable_warnings = ["module-not-imported"]
source = ["${SRC_DIR-.}"]
data_file = ".cov/coverage"

[tool.coverage.report]
omit = ["tests/*"]
